2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsppredriverhook.c: New file.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Moved most of the remaining CPU Table fields to the
	Configuration Table. This included pretasking_hook, predriver_hook,
	postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeUniverse.c, vmeUniverse/vmeTsi148.c:
	silenced compiler warnings caused by type changes
	in byteorder.h (volatile unsigned * -> volatile uint32_t *)

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bootcard.c: Add comment.

2007-07-15	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeTsi148.c: Use size_t for sizes.

2007-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsppost.c: Split open of the console from the standard BSP code so it
	is easier to stub out.

2007-05-10	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeUniverse.c: Changed types to silence
	compiler warnings.

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Move __fini call to inside executive for
	symmettry with __init call.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* bootcard.c: RTEMS Workspace now defaults to not being zeroed. This
	significantly speeds up boot time on targets not requiring memory to
	be touched at boot time.

2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* dummy_printk_support.c: New file.

2007-03-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* vmeUniverse/vmeUniverse.c: Use uint32_t for pci_ulong.
